Prevent too long interest field trolling

--- a/app/assets/stylesheets/partials/user-activity-feed.css.scss
+++ b/app/assets/stylesheets/partials/user-activity-feed.css.scss
@@ -113,6 +113,7 @@
       padding-left: 0;
       padding-right: 0;
       font-size: 15px;
+      word-break: break-all;
 
       input {
         width: 100%;
